a working version with sending in telegram

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,6 @@
 services:
-  tendertracker:
+  tendermessage:
     build: .
-    ports:
-      - "8081:8081"
     volumes:
       - ./data:/app/data
     restart: unless-stopped
