the Moscow time zone is set

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,8 @@
 services:
   tendermessage:
     build: .
+    environment:
+      - TZ=Europe/Moscow
     volumes:
       - ./data:/app/data
     restart: unless-stopped
